--- a/package.json
+++ b/package.json
@@ -17,5 +17,13 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/udacity/reactnd-chirper-app.git"
+  },
+  "devDependencies": {
+    "react-icons": "^3.9.0",
+    "react-redux": "^7.2.0",
+    "react-redux-loading": "^1.0.1",
+    "react-router-dom": "^5.1.2",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0"
   }
 }
